--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-title: Hanlin Cai
-# tagline: Two roads diverged in woods, I took the one less traveled by.
-description: Two roads diverged in woods, I took the one less traveled by.
-#Comment out url when working locally to resolve base urls correctly
-url: https://caihanlin.com
+title: Guang Yang
+description: Guang Guang Guang
+url: https://ylknight.github.io/
 
 # Owner/author information
 owner:
