--- a/_config.yml
+++ b/_config.yml
@@ -4,21 +4,16 @@ url: https://ylknight.github.io/
 
 # Owner/author information
 owner:
-  name: Hanlin Cai
+  name: Guang Yang
   avatar: hanlin.jpg
 #  bio:
-  email: hanlin.cai@ieee.org
+  email: yangguangyud@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: lancecai2002
   # facebook: caihanlin2002
-  github: GuangLun2000
+  github: YLKnight
   linkedin: hanlincai
   scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
-  # instagram: lancecai2002
-  # lastfm:
-  # tumblr:
-  # For Google Authorship https://plus.google.com/authorship
-  # google_plus:
 
 # Analytics and webmaster tools stuff goes here
 # https://search.google.com/search-console/ownership
