--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://ylknight.github.io/
 # Owner/author information
 owner:
   name: Guang Yang
-  avatar: hanlin.jpg
+  avatar: Icon.jpg
 #  bio:
   email: yangguangyud@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
