--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ owner:
 #  bio:
   email: yangguangyud@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: lancecai2002
+  twitter: 7Welkin
   # facebook: caihanlin2002
   github: YLKnight
-  linkedin: hanlincai
+  # linkedin: hanlincai
   scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
 
 # Analytics and webmaster tools stuff goes here
