--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ owner:
   # facebook: caihanlin2002
   github: YLKnight
   # linkedin: hanlincai
-  scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
+  # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
 
 # Analytics and webmaster tools stuff goes here
 # https://search.google.com/search-console/ownership
