--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,8 @@ google_verify: "SkiyuGpJOKT74vv5GmXLvYXXDkXy4v8VWPtbelYz3Hs"
 # Links to include in top navigation
 # For external links add external: true
 links:
-  - title: About Me
+  - title: Home
     url: /
-  - title: Resume
-    url: /file/CV-HanlinCAI.pdf
   - title: Publications
     url: /publications/
 
