--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ owner:
 #  bio:
   email: yangguangyud@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: 7Welkin
+  # twitter: 7Welkin
   # facebook: caihanlin2002
   github: YLKnight
   # linkedin: hanlincai
