--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ owner:
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   # twitter: 7Welkin
   # facebook: caihanlin2002
-  github: YLKnight
+  # github: YLKnight
   # linkedin: hanlincai
   # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
 
