--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Guang Yang
 description: Guang Guang Guang
-url: https://ylknight.github.io/
+url: https://ylknight.github.io
 
 # Owner/author information
 owner:
