--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ owner:
   name: Guang Yang
   avatar: Icon.jpg
 #  bio:
-  email: guang.yang@my.cityu.edu.hk
+  email: guangyang@cuhk.edu.hk
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   # twitter: 7Welkin
   # facebook: caihanlin2002
