--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ owner:
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   # twitter: 7Welkin
   # facebook: caihanlin2002
-  # github: YLKnight
+  github: YLKnight
   # linkedin: hanlincai
-  # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
+  scholar: https://scholar.google.com/citations?user=qLFk50MAAAAJ&hl=en
 
 # Analytics and webmaster tools stuff goes here
 # https://search.google.com/search-console/ownership
